--- a/qrhome.html
+++ b/qrhome.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create your own website</a></section><section class="mbr-section info1 cid-qJhb7URmXa" id="info1-12">
+<section class="engine"><a href="https://mobirise.ws/h">how to make own website</a></section><section class="mbr-section info1 cid-qJhb7URmXa" id="info1-12">
 
     
 
@@ -163,7 +163,7 @@
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7"></ul>
                     </div>
-                    <div class="mbr-section-btn text-center pt-4"><a href="https://mobirise.com" class="btn btn-primary display-4">Περισσότερα</a></div>
+                    <div class="mbr-section-btn text-center pt-4"><a href="speed_check.html" class="btn btn-primary display-4">Περισσότερα</a></div>
                 </div>
             </div>
         </div>
