--- a/page5.html
+++ b/page5.html
@@ -36,15 +36,15 @@
                     <h2 class="mbr-section-title pb-5 mbr-fonts-style display-5">Λειτουργείες για τους ποιο ψαγμένους</h2>
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_29" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_24" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_29" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_24" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-7">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span><strong>&nbsp;Τι μπορώ να κάνω για να βελτιώσω την εμβέλεια του ασύρματου δικτύου μου (WiFi)</strong></h4>
                             </a>
                         </div>
-                        <div id="collapse1_29" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_29">
+                        <div id="collapse1_24" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_24">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7"></p><p></p><p>Όλα τα μοντέλα των εξοπλισμών (router) είναι ρυθμισμένα να έχουν τη μέγιστη εμβέλεια ασύρματης εκπομπής. Ωστόσο, με τις παρακάτω ενέργειες μπορείς να βελτιώσεις την ποιότητας λήψης του ασύρματου δικτύου στο χώρο σου.
 <br>
@@ -59,13 +59,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_29" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_24" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-7">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span><strong>&nbsp;Port forwarding και DMZ στο Router Spedport Entry 2i</strong></h4>
                             </a>
                             
                         </div>
-                        <div id="collapse2_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_29">
+                        <div id="collapse2_24" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_24">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7"></p><p>Δες πώς μπορείς να κάνεις ρύθμιση για port forwarding και DMZ στο Router <a href="page5.html#header2-34">Speedport Entry 2i</a></p><p></p><p></p>
                             </div>
@@ -73,12 +73,12 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_29" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_24" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-7">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span><strong>&nbsp;Πώς μπορώ να απενεργοποιήσω το φίλτρο αυξημένης προστασίας και να ξεμπλοκάρω θύρες</strong></h4>
                             </a>
                         </div>
-                        <div id="collapse3_29" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_29">
+                        <div id="collapse3_24" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_24">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7"></p><p></p><p></p><p>Το φίλτρο προστασίας της Otenet μπλοκάρει συγκεκριμένες θύρες επικοινωνίας και αυξάνει σημαντικά το βαθμό προστασίας σου.
 <br>
@@ -114,7 +114,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">bootstrap template</a></section><section class="mbr-section content4 cid-qJOVDTTUoa" id="content4-30">
+<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="mbr-section content4 cid-qJOVDTTUoa" id="content4-30">
 
     
 
