--- a/qrhome.html
+++ b/qrhome.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/e">how to make a site</a></section><section class="mbr-section info1 cid-qJhb7URmXa" id="info1-12">
+<section class="engine"><a href="https://mobirise.me/e">how to make a site for free</a></section><section class="mbr-section info1 cid-qJhb7URmXa" id="info1-12">
 
     
 
