--- a/chanels.html
+++ b/chanels.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">free landing page templates</a></section><section once="" class="cid-qIYsnRaToN" id="footer7-4w">
+<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section once="" class="cid-qIYsnRaToN" id="footer7-4w">
 
     
 
