--- a/deeplink.html
+++ b/deeplink.html
@@ -1,3 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> <html lang="en"> <head> <meta http-equiv="content-type" content="text/html; charset=utf-8"> <title>Title Goes Here</title> </head> <body> <p>This is my web page</p> </body>       "position": 8,
-  
-</html> 
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Redirect</title>
+<script type="text/javascript"> // <![CDATA[
+//iPhone Version:
+if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
+    window.location = "itms-apps://itunes.apple.com/app/id1235021952";
+}
+//Android Version:
+if(navigator.userAgent.match(/android/i)) {
+    window.location = "market://details?id=gr.cosmote.ufixit";
+
+ 
+</script>
+</body>
+</html>
