--- a/deeplink.html
+++ b/deeplink.html
@@ -6,7 +6,7 @@
 <script type="text/javascript"> // <![CDATA[
 //iPhone Version:
 if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-    window.location = "itms-apps://itunes.apple.com/app/id1235021952";
+    window.location = "https://itunes.apple.com/gr/app/cosmote-ufixit/id1235021952?l=el&mt=8";
 }
 //Android Version:
 if(navigator.userAgent.match(/android/i)) {
