--- a/deeplink.html
+++ b/deeplink.html
@@ -1,5 +1,3 @@
-
-</html>
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -8,15 +6,15 @@
 <script type="text/javascript"> // <![CDATA[
 // iPhone or iPad Version:
 if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPad/i))) {
-    window.location = "itms-apps://itunes.apple.com/app/id1235021952";
+    window.location = "https://itunes.apple.com/us/app/fkcc/id1364772616?mt=8";
 }
 // Android Version:
 if(navigator.userAgent.match(/android/i)) {
-    window.location = "market://details?id=gr.cosmote.ufixit";
+    window.location = "https://play.google.com/store/apps/details?id=lgwithj.FKCC";
 }
 // ELSE
 else {
-    window.location = "https://www.cosmote.gr";
+    window.location = "http://www.firstkoreanchurch.org/";
 }
  
 </script>
