--- a/deeplink.html
+++ b/deeplink.html
@@ -6,15 +6,15 @@
 <script type="text/javascript"> // <![CDATA[
 // iPhone or iPad Version:
 if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPad/i))) {
-    window.location = "https://itunes.apple.com/us/app/fkcc/id1364772616?mt=8";
+    window.location = "itms-apps://itunes.apple.com/app/id1235021952";
 }
 // Android Version:
 if(navigator.userAgent.match(/android/i)) {
-    window.location = "https://play.google.com/store/apps/details?id=lgwithj.FKCC";
+    window.location = "market://details?id=gr.cosmote.ufixit";
 }
 // ELSE
 else {
-    window.location = "http://www.firstkoreanchurch.org/";
+    window.location = "https://www.cosmote.gr";
 }
  
 </script>
