--- a/deeplink.html
+++ b/deeplink.html
@@ -3,20 +3,22 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Redirect</title>
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script type="text/javascript"> // <![CDATA[
 // iPhone or iPad Version:
 if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPad/i))) {
-    window.location = "itms-apps://itunes.apple.com/app/id1235021952";
+    window.location = "https://itunes.apple.com/gr/app/cosmote-ufixit/id1235021952?l=el&mt=8";
 }
 // Android Version:
 if(navigator.userAgent.match(/android/i)) {
-    window.location = "market://details?id=gr.cosmote.ufixit";
+    window.location = "https://play.google.com/store/apps/details?id=gr.cosmote.ufixit&hl=en";
 }
 // ELSE
 else {
     window.location = "https://www.cosmote.gr";
 }
  
+</script>
 </script>
 </head>
 <body>
