--- a/deeplink.html
+++ b/deeplink.html
@@ -7,11 +7,11 @@
 <script type="text/javascript"> // <![CDATA[
 // iPhone or iPad Version:
 if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPad/i))) {
-    window.location = "https://itunes.apple.com/gr/app/cosmote-ufixit/id1235021952?l=el&mt=8";
+    window.location = "itms-apps://itunes.apple.com/app/id1235021952";
 }
 // Android Version:
 if(navigator.userAgent.match(/android/i)) {
-    window.location = "https://play.google.com/store/apps/details?id=gr.cosmote.ufixit&hl=en";
+    window.location = "market://details?id=gr.cosmote.ufixit";
 }
 // ELSE
 else {
