--- a/deeplink.html
+++ b/deeplink.html
@@ -6,7 +6,7 @@
 <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script type="text/javascript"> // <![CDATA[
 // iPhone or iPad Version:
-if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPad/i))) {
+if((navigator.userAgent.match(/iPhone/i)) {
     window.location = "itms-apps://itunes.apple.com/app/id1235021952";
 }
 // Android Version:
