--- a/history_buygr.html
+++ b/history_buygr.html
@@ -44,7 +44,7 @@
                         Η ιστορία της Ακρόπολης</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com">Συνδρομητές Cosmote TV GO</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">Πληρωμή ανα προβολή 2,5€</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">COSMOTE TV GO Documentaries Pack 5€</a></div>
             </div>
         </div>
     </div>
