--- a/history_buygr.html
+++ b/history_buygr.html
@@ -43,7 +43,7 @@
                     <p class="mbr-text mbr-fonts-style display-5">
                         Η ιστορία της Ακρόπολης</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com">Συνδρομητές Cosmote TV GO</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://www.cosmote.gr/eshop/global/gadgets/configurator.jsp?productId=prod1640027_prod">Συνδρομητές Cosmote TV GO</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://www.cosmote.gr/eshop/global/gadgets/configurator.jsp?productId=prod1640027_prod">COSMOTE TV GO Documentaries Pack 5€</a></div>
             </div>
         </div>
